deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: external_servers
  namespace: ns_name
spec:
  selector:
    app: external_servers
  ports:
  - port: 6000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: ns_name
spec:
  selector:
    app: service1
  ports:
  - port: 6001
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: ns_name
spec:
  selector:
    app: service2
  ports:
  - port: 6003
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: service2-mysql
  namespace: ns_name
  labels:
    app: service2
spec:
  selector:
    app: service2
    tier: mysql
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: service1-mysql
  namespace: ns_name
  labels:
    app: service1
spec:
  selector:
    app: service1
    tier: mysql
  ports:
    - port: 3306
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: external_servers-dashboard-ingress
  namespace: ns_name
spec:
  rules:
  - host: external_servers.example.com
    http:
      paths:
      - backend:
          serviceName: external_servers
          servicePort: 6000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: service1-dashboard-ingress
  namespace: ns_name
spec:
  rules:
  - host: service1.example.com
    http:
      paths:
      - backend:
          serviceName: service1
          servicePort: 6001
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: service2-dashboard-ingress
  namespace: ns_name
spec:
  rules:
  - host: service2.example.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 6002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: ipg-service2-dashboard-ingress
  namespace: ns_name
spec:
  rules:
  - host: ipg.example.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 6003
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: ns_name
  labels:
    app: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: Localrepo_URL/docker/$CI_PROJECT_NAME/service1:0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 6000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: ns_name
  labels:
    app: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: Localrepo_URL/docker/$CI_PROJECT_NAME/service2:0.1-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8680
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-mysql
  namespace: ns_name
  labels:
    app: service2
spec:
  selector:
    matchLabels:
      app: service2
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service2
        tier: mysql
    spec:
      containers:
      - image: Localrepo_URL/docker/mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: service2-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: service2-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: service2-mysql-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-mysql
  namespace: ns_name
  labels:
    app: service1
spec:
  selector:
    matchLabels:
      app: service1
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: service1
        tier: mysql
    spec:
      containers:
      - image: Localrepo_URL/docker/mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
          - name: mysql-config
            mountPath: /etc/mysql/my.cnf
            subPath: my.cnf
          - name: service1-mysql-persistent-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-config
          configMap:
            name: service1-mysql-cm
        - name: service1-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: service1-mysql-pv-claim
